--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,65 +3,76 @@ name: CI
 on:
   push:
     branches:
+      - main
       - master
   pull_request: {}
 
+concurrency:
+  group: ci-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  lint:
-    name: Lint
-    env:
-      CI: true
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 12.x
-          cache: npm
-      - run: npm install
-      - run: npm run lint:js
-
   test:
-    name: Test
-    env:
-      CI: true
+    name: "Tests"
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 12.x
-          cache: npm
-      - run: npm install
-      - run: npm run test
+    timeout-minutes: 10
 
-  ember-try:
-    name: "Ember Try"
-    env:
-      CI: true
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
+          cache: npm
+      - name: Install Dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
+      - name: Run Tests
+        run: npm run test:ember
+
+  floating:
+    name: "Floating Dependencies"
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
+          cache: npm
+      - name: Install Dependencies
+        run: npm install --no-shrinkwrap
+      - name: Run Tests
+        run: npm run test:ember
+
+  try-scenarios:
+    name: ${{ matrix.try-scenario }}
+    runs-on: ubuntu-latest
+    needs: "test"
+    timeout-minutes: 10
+
     strategy:
+      fail-fast: false
       matrix:
         try-scenario:
-          [
-            ember-lts-3.20,
-            ember-lts-3.24,
-            ember-lts-3.28,
-            ember-release,
-            ember-beta,
-            ember-canary,
-            embroider-safe,
-            # embroider-optimized, ember-data is currently failing. https://github.com/embroider-build/embroider/issues/396#issuecomment-611885598
-          ]
+          - ember-lts-4.4
+          - ember-lts-4.8
+          - ember-release
+          - ember-beta
+          - ember-canary
+          - embroider-safe
+          - embroider-optimized
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
         with:
-          node-version: 12.x
+          node-version: 14.x
           cache: npm
-      - run: npm install
-      - run: node_modules/.bin/ember try:one ${{ matrix.try-scenario }} --skip-cleanup
-        timeout-minutes: 10
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Tests
+        run: ./node_modules/.bin/ember try:one ${{ matrix.try-scenario }}
