--- a/package.json
+++ b/package.json
@@ -2,61 +2,81 @@
   "name": "ember-composable-helpers",
   "version": "5.0.0",
   "description": "Composable helpers for Ember",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "ember test",
-    "node-test": "mocha test --recursive --reporter spec",
-    "test:all": "ember try:each",
-    "contributors": "npx contributor-faces -e \"(*-bot|*\\[bot\\]|*-tomster|homu|bors)\""
+    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each"
   },
   "bugs": "https://github.com/DockYard/ember-composable-helpers/issues",
   "homepage": "https://github.com/DockYard/ember-composable-helpers",
-  "engines": {
-    "node": "12.* || 14.* || >= 16"
-  },
+
   "contributors": [
     "Lauren Tan <arr@sugarpirate.com>",
     "Marten Schilstra <mail@martenschilstra.nl>"
   ],
   "devDependencies": {
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
     "@ember/optional-features": "^2.0.0",
-    "@ember/test-helpers": "^2.4.2",
-    "@embroider/test-setup": "^0.43.5",
-    "babel-eslint": "^10.0.3",
+    "@ember/string": "^3.0.1",
+    "@ember/test-helpers": "^2.9.3",
+    "@embroider/test-setup": "^2.1.1",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
     "chai": "^4.3.7",
-    "ember-auto-import": "^2.2.4",
-    "ember-cli": "~3.28.0",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-htmlbars": "^5.7.1",
-    "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-release": "^0.2.9",
+    "concurrently": "^8.0.1",
+    "ember-auto-import": "^2.6.3",
+    "ember-cli": "~4.12.1",
+    "ember-cli-dependency-checker": "^3.3.1",
+    "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-template-lint": "^3.6.0",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "^3.28.0",
-    "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^2.0.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^5.1.4",
-    "ember-resolver": "^8.0.2",
+    "ember-load-initializers": "^2.1.2",
+    "ember-page-title": "^7.0.0",
+    "ember-qunit": "^6.2.0",
+    "ember-resolver": "^10.0.0",
     "ember-sinon": "^3.0.0",
-    "ember-source": "~3.28.0",
-    "ember-source-channel-url": "^2.0.1",
-    "ember-try": "^1.4.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-ember": "^7.1.0",
-    "eslint-plugin-node": "^10.0.0",
+    "ember-source": "~4.12.0",
+    "ember-source-channel-url": "^3.0.0",
+    "ember-template-lint": "^5.7.2",
+    "ember-try": "^2.0.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-ember": "^11.5.0",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-qunit": "^7.3.4",
     "loader.js": "^4.7.0",
     "mocha": "^2.4.5",
-    "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0",
-    "webpack": "^5.64.4"
+    "prettier": "^2.8.7",
+    "qunit": "^2.19.4",
+    "qunit-dom": "^2.0.0",
+    "stylelint": "^15.4.0",
+    "stylelint-config-standard": "^32.0.0",
+    "stylelint-prettier": "^3.0.0",
+    "webpack": "^5.78.0"
+  },
+  "peerDependencies": {
+    "ember-source": "^4.0.0"
+  },
+  "engines": {
+    "node": "14.* || 16.* || >= 18"
   },
   "keywords": [
     "ember-addon",
@@ -73,14 +93,11 @@
   "repository": "https://github.com/DockYard/ember-composable-helpers",
   "license": "MIT",
   "author": "Dockyard <oss@dockyard.com>",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "dependencies": {
     "@babel/core": "^7.0.0",
-    "broccoli-funnel": "2.0.1",
-    "ember-cli-babel": "^7.26.3",
+    "broccoli-funnel": "^3.0.1",
+    "ember-cli-babel": "^7.26.11",
+    "ember-cli-htmlbars": "^6.2.0",
     "resolve": "^1.10.0"
   },
   "ember": {
