--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "ember serve",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test",
+    "test:node": "mocha test --recursive --reporter spec",
     "test:ember-compatibility": "ember try:each"
   },
   "bugs": "https://github.com/DockYard/ember-composable-helpers/issues",
@@ -63,6 +64,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.4",
     "loader.js": "^4.7.0",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.7",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
