--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
+    "tracked-built-ins": "3.2.0",
     "webpack": "^5.78.0"
   },
   "peerDependencies": {
