--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eflexsystems/ember-composable-helpers",
-  "version": "5.0.0-1",
+  "version": "5.1.0",
   "description": "Composable helpers for Ember",
   "directories": {
     "doc": "doc",
