--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,9 +14,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 14.x
       - run: npm ci
-      - run: npm test
 
   publish-gpr:
     needs: build
@@ -28,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 14.x
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
       - run: npm publish
